some refactoring for maven building method